# exam-analyzer

./: .env.example  .gitignore  Dockerfile  README.md  benchmark.py  docker-compose.test.yml  docker-compose.yml  main.py  mise.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: c85d39a8c0b6_initial_schema.py
core/: config.py
models/: db.py  schemas.py
providers/: cebraspe.py  fgv.py
services/: analyzer.py  ocr.py  pdf.py
storage/: database.py  memory.py
storage/repositories/: answer_key.py  exam.py  result.py
tests/: conftest.py  test_routes.py  test_storage.py
tests/benchmark/: test_real_world.py
tests/providers/: test_cebraspe.py  test_fgv.py
tests/services/: test_analyzer.py  test_ocr.py  test_pdf.py
